<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.activities.MapsActivity"
    >
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        map:uiScrollGestures="false"
        />

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:background="@color/colorBackground"-->
<!--        />-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="1dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/round_text_view"
        >

        <EditText
            android:id="@+id/place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="@string/packing_assistant"
            android:textColorHint="@color/colorTextPrimary"
            android:textColor="@color/colorTextPrimary"
            android:textSize="28sp"
            android:imeOptions="actionDone"
            android:gravity="center"
            android:inputType="text"
            android:background="@android:color/transparent"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

<!--        <TextView-->
<!--            android:id="@+id/title_2"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/packing_assistant_2"-->
<!--            android:textColor="@color/colorTextPrimary"-->
<!--            android:textSize="18sp"-->
<!--            android:gravity="center"-->
<!--            android:textStyle="italic"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/title" />-->

        <ImageView
            android:id="@+id/logo"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/title_layout"
        app:layout_constraintBottom_toTopOf="@+id/suitcases_layout"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.43"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/trip_type_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/round_text_view"
            android:elevation="1dp"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.49">

            <TextView
                android:id="@+id/travel_type_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel_type"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ScrollView
                android:id="@+id/occasion_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.85"
                app:layout_constraintTop_toBottomOf="@+id/travel_type_text"
                >
                <LinearLayout
                    android:id="@+id/parent_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                </LinearLayout>
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dates_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:elevation="1dp"
            android:background="@drawable/round_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.49"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.49">

            <TextView
                android:id="@+id/date_text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/from_date"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/round_button"
                android:onClick="fromDate"
                android:elevation="8dp"
                android:drawableStart="@drawable/calendar"
                android:drawableTint="@color/colorTextPrimary"
                android:text="@string/select_date_1"
                android:textColor="@color/colorTextPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_text_1"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.95" />

            <Button
                android:id="@+id/to_date"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/round_button"
                android:onClick="toDate"
                android:text="@string/select_date_2"
                android:elevation="8dp"
                android:drawableStart="@drawable/calendar"
                android:drawableTint="@color/colorTextPrimary"
                android:textColor="@color/colorTextPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/from_date"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.95" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sex_type_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/round_text_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            android:elevation="1dp"
            app:layout_constraintHeight_percent="0.49"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.49">

            <TextView
                android:id="@+id/gender_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:layout_constraintTop_toBottomOf="@id/gender_text"
                >
                <RadioButton
                    android:id="@+id/radio_button_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/male"
                    android:textColor="@color/colorTextPrimary"
                    android:buttonTint="@color/colorTextPrimary"
                    android:background="@drawable/round_button"
                    android:layout_marginBottom="7dp"
                    android:elevation="8dp"
                    android:drawableEnd="@drawable/people"
                    />
                <RadioButton
                    android:id="@+id/radio_button_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/female"
                    android:textColor="@color/colorTextPrimary"
                    android:buttonTint="@color/colorTextPrimary"
                    android:background="@drawable/round_button"
                    android:drawableEnd="@drawable/people"
                    android:elevation="8dp"
                    />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/suitcases_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/round_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.45"
        android:elevation="1dp"
        >

        <TextView
            android:id="@+id/title_suitcases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suitcases"
            android:textColor="@color/colorTextPrimary"
            android:textSize="28sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/suitcase_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_suitcases"
            >

        </androidx.recyclerview.widget.RecyclerView>

<!--        <HorizontalScrollView-->
<!--            android:id="@+id/suitcase_scroll_view"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:fillViewport="true"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHeight_default="percent"-->
<!--            app:layout_constraintHeight_percent="0.85"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/title_suitcases">-->

<!--            <LinearLayout-->
<!--                android:id="@+id/suitcase_linear_layout"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:orientation="horizontal"-->
<!--                >-->

<!--            </LinearLayout>-->
<!--        </HorizontalScrollView>-->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/new_suitcase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="2dp"
        android:src="@drawable/new_suitcase"
        app:fab_colorNormal="@color/colorPrimary"
        app:fab_colorPressed="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>


